<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.main.MainActivity"
    android:background="@drawable/side_nav_bar">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rllContent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView

            android:id="@+id/response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/Welcome"
            android:textColor="@color/windowBackground"
            android:visibility="visible" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:id="@+id/tilLogin"
            android:layout_below="@+id/response"
            android:layout_alignLeft="@+id/response"
            android:layout_alignStart="@+id/response">
            <EditText
                style="@style/MyMaterialTheme.MyEditText"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtName"
                android:hint="@string/name" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/tilPwd"
            android:layout_below="@+id/tilLogin"
            android:layout_alignLeft="@+id/tilLogin"
            android:layout_alignStart="@+id/tilLogin"
            android:layout_marginBottom="10dp">
            <EditText
                style="@style/MyMaterialTheme.MyEditText"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edtPwd"
                android:hint="@string/pwd" />

        </android.support.design.widget.TextInputLayout>



        <Button
            style="@style/MyMaterialTheme.MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/tilPwd"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imvLoading"
        android:contentDescription="@string/loading"
        android:layout_gravity="center"
        android:layout_centerInParent="true" />
</RelativeLayout>
