<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:fitsSystemWindows="true">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways" />
    <LinearLayout
        android:id="@+id/llBottomContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/chbPrintPhoto"
            style="@style/MyMaterialTheme.MyCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/photo_print"
            android:textColor="@color/textColorPrimary" />
        <Button
            android:id="@id/btnRegister"
            style="@style/MyMaterialTheme.MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableLeft="@drawable/ic_send_white_24dp"
            android:drawableStart="@drawable/ic_send_white_24dp"
            android:text="@string/extradution"
            />
    </LinearLayout>
    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llBottomContainer"
        android:layout_below="@id/toolbar"
        android:padding="3dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/rllCarData"
                style="@style/MyMaterialTheme.MyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imvPhoto"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/image"
                    android:maxHeight="120dp"
                    android:maxWidth="120dp"
                    android:minHeight="120dp"
                    android:minWidth="12dp" />
                <TextView
                    android:id="@+id/txvcarData"
                    style="@style/MyMaterialTheme.MyEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="5dp"
                    android:layout_toLeftOf="@id/imvPhoto"
                    android:layout_toStartOf="@id/imvPhoto"
                    android:text="@string/carData" />
                <TextView
                    android:id="@+id/txvManufactureTitle"
                    style="@style/MyMaterialTheme.MyEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txvcarData"
                    android:text="@string/manufacture"
                    />
                <TextView
                    android:id="@+id/txvManufacture"
                    style="@style/MyMaterialTheme.MyEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txvcarData"
                    android:layout_toEndOf="@id/txvManufactureTitle"
                    android:layout_toLeftOf="@id/imvPhoto"
                    android:layout_toRightOf="@id/txvManufactureTitle"
                    android:layout_toStartOf="@id/imvPhoto"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/manufacture"
                    android:textColor="@color/textColorPrimary" />
                <TextView
                    android:id="@+id/txvModelTitle"
                    style="@style/MyMaterialTheme.MyEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txvManufactureTitle"
                    android:text="@string/model" />
                <TextView
                    android:id="@+id/txvModel"
                    style="@style/MyMaterialTheme.MyEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txvManufactureTitle"
                    android:layout_toEndOf="@id/txvModelTitle"
                    android:layout_toLeftOf="@id/imvPhoto"
                    android:layout_toRightOf="@id/txvModelTitle"
                    android:layout_toStartOf="@id/imvPhoto"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/model"
                    android:textColor="@color/textColorPrimary" />
                <TextView
                    android:id="@+id/txvCarIdTitle"
                    style="@style/MyMaterialTheme.MyEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txvModelTitle"
                    android:text="@string/car_id"/>
                <TextView
                    android:id="@+id/txvCarId"
                    style="@style/MyMaterialTheme.MyEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txvModelTitle"
                    android:layout_toEndOf="@id/txvCarIdTitle"
                    android:layout_toLeftOf="@id/imvPhoto"
                    android:layout_toRightOf="@id/txvCarIdTitle"
                    android:layout_toStartOf="@id/imvPhoto"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/car_id"
                    android:textColor="@color/textColorPrimary" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rllRegCertificate"
                style="@style/MyMaterialTheme.MyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rllCarData">
                <TextView
                    android:id="@+id/txvRegCertificate"
                    style="@style/MyMaterialTheme.MyEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/reg_sertifacate" />

                <Spinner
                    android:id="@+id/spnRegCertificate"
                    style="@style/MyMaterialTheme.MySpinner"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txvRegCertificate" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilSeriesRC"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spnRegCertificate">
                    <EditText
                        android:id="@+id/edtSeriesRC"
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/series"
                        android:imeOptions="actionNext"
                        android:inputType="textCapCharacters" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilNumberRC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spnRegCertificate"
                    android:layout_toEndOf="@id/tilSeriesRC"
                    android:layout_toRightOf="@id/tilSeriesRC">
                    <EditText
                        android:id="@+id/edtNumberRC"
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/Number"
                        android:imeOptions="actionNext"
                        android:inputType="textCapCharacters" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilLastNameRC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilNumberRC">
                    <EditText
                        android:id="@+id/edtLastNameRC"
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/first_last_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilAddressRC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilLastNameRC"
                    android:layout_marginBottom="10dp">
                    <EditText
                        android:id="@+id/edtAddressRC"
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/address"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rllDriverLicense"
                style="@style/MyMaterialTheme.MyEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rllRegCertificate">
                <TextView
                    android:id="@+id/txvDriverLisense"
                    style="@style/MyMaterialTheme.MyEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/driverLicense" />
                <Button
                    android:id="@+id/btnCopy"
                    style="@style/MyMaterialTheme.MyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_margin="2dp"
                    android:layout_toEndOf="@id/txvDriverLisense"
                    android:layout_toRightOf="@id/txvDriverLisense"
                    android:padding="1dp"
                    android:text="@string/copy" />

                <Spinner
                    android:id="@+id/spnDriverLicense"
                    style="@style/MyMaterialTheme.MySpinner"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txvDriverLisense" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilSeriesDL"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spnDriverLicense">
                    <EditText
                        android:id="@+id/edtSeriesDL"
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/series"
                        android:imeOptions="actionNext"
                        android:inputType="textCapCharacters" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilNumberDL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spnDriverLicense"
                    android:layout_toEndOf="@id/tilSeriesDL"
                    android:layout_toRightOf="@id/tilSeriesDL">
                    <EditText
                        android:id="@+id/edtNumberDL"
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/Number"
                        android:imeOptions="actionNext"
                        android:inputType="textCapCharacters" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilLastNameDL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilNumberDL">
                    <EditText
                        android:id="@+id/edtLastNameDL"
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/first_last_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilAddressDL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilLastNameDL"
                    android:layout_marginBottom="10dp">
                    <EditText
                        android:id="@+id/edtAddressDL"
                        style="@style/MyMaterialTheme.MyEditText"
                        android:hint="@string/address"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rllDriverLicense">
                <EditText
                    android:id="@+id/edtContact"
                    style="@style/MyMaterialTheme.MyEditText"
                    android:hint="@string/contact"
                    android:imeOptions="actionNext"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tilContact"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/edtCode"
                    style="@style/MyMaterialTheme.MyEditText"
                    android:hint="@string/code"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>



    <ImageView
        android:id="@+id/imvLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/pb_loading"
        android:contentDescription="@string/loading" />

</RelativeLayout>


